<resources>
    <string name="app_name">TestTask</string>

    <!--Alert-->
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="title_error">Ошибка</string>
    <string name="empty_read_books">У вас нет прочитанных книг</string>

    <!--Book-->
    <string name="authors">Авторы: </string>
    <string name="author">Автор: </string>
    <string name="title_book_screen">Прочитано</string>

    <!--Profile-->
    <string name="no_data">Нет данных</string>
    <string name="title_profile_screen">Профиль</string>

    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="city">Город проживания</string>
    <string name="gender">Пол</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Номер телефона</string>
    <string name="count_read_book">Количество прочитанных книг</string>
    <string name="empty_description">---</string>

</resources>